# dotmac_academy_app

./: .env.example  .gitignore  README.md  alembic.ini  dev.env  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
alembic/: env.py
alembic/versions/: 0005_labs.py  0006_platform_settings.py  0007_person_profile.py  0008_course_offerings.py  0008_lab_instance_name_unique.py  0009_course_lifecycle.py  0009_offering_window.py  0010_account_tokens.py  0010_course_completions.py  0011_admissions.py  0011_certificates.py  0012_offering_activities.py  0013_course_prerequisites.py  0014_account_tokens.py  0015_person_status.py  0016_activity_max_attempts.py  0017_activity_grading.py  0018_course_status.py  0019_chapter_body_md.py  0020_activity_attempts.py  0020_notifications.py  0021_announcements.py  0022_activity_weight.py  0023_merge_gaps_attempts_heads.py  0024_chapter_reads.py  0025_admissions.py  0026_class_sessions.py  0027_assessment_mode.py  0028_onboarding_tasks.py  0029_completion_erp_synced.py  0030_entrance_assessment.py  0031_applicant_assessment_token.py  0032_entrance_timer.py  0033_tenant_default_entrance.py  20260504_0001_initial_tenant_schema.py  20260626_0002_courses.py  20260626_0003_cohorts.py  20260626_0004_assessment.py  20260711_0034_entrance_resilience.py  20260711_0035_applicant_profile.py
app/: cli.py  config.py  db.py  main.py
app/api/: admissions.py  auth.py  deps.py  persons.py  rbac.py  tenants.py
app/middleware/: csrf.py  observability.py  rate_limit.py  tenant.py
app/models/: __init__.py  account_token.py  admissions.py  announcement.py  assessment.py  attempt.py  auth.py  base.py  certificate.py  class_session.py  cohort.py  completion.py  course.py  lab.py  notification.py  offering.py  onboarding.py  pacing.py  person.py  platform_settings.py  prerequisite.py  rbac.py  reading.py  tenant.py
app/services/: accounts.py  admissions.py  agenda.py  analytics.py  announcements.py  applicant_email.py  assessment.py  at_risk.py  attempts.py  audit.py  authoring.py  bank_loader.py  bootstrap.py  catalog.py  certificates.py  completion.py  content_import.py  email.py  (+27 more)
deploy/: academy-email-digest.service  academy-email-digest.timer  academy-erp-training-sync.service  academy-erp-training-sync.timer  academy-lab-worker.service  academy-reap-labs.service  academy-reap-labs.timer  nginx-academy.conf
docs/: entrance-assessment.example.yaml  nano-banana-image-prompts.md
scripts/: backfill_applicants.py  initdb-roles.sql  seed_academy_demo.py
src/: input.css
static/: app.css  chapter.js
templates/: _activity_result.html  _mark_complete.html  activity.html  apply.html  apply_assessment.html  base.html  chapter.html  dashboard.html  login.html  notifications.html  progress.html  search.html
tests/: conftest.py  test_admissions_enrollment.py  test_admissions_isolation.py  test_announcement_isolation.py  test_apply_assessment.py  test_apply_page.py  test_assessment_isolation.py  test_at_risk.py  test_auth_tenant_claim.py  test_backfill.py  test_cohort_isolation.py  test_course_isolation.py  test_cross_tenant_isolation.py  test_end_to_end.py  test_lab_isolation.py  test_notification_isolation.py  test_offering_backfill.py  test_rbac_audit_isolation.py  test_route_registration.py  test_scheduling.py  test_security_middleware.py  test_seed_admin_password.py
(+154 files in other folders)
