[tool.poetry]
name = "dotmac_academy_app"
version = "0.1.0"
description = "Multi-tenant FastAPI starter"
authors = ["DotMac"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
gunicorn = "^22.0"
sqlalchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.2"}
alembic = "^1.13"
pydantic = "^2.9"
pydantic-settings = "^2.5"
email-validator = "^2.2"
jinja2 = "3.1.4"
python-multipart = "0.0.9"
markdown = "3.6"
pyyaml = "6.0.1"
jsonpath-ng = "^1.8.0"
websockets = "^16.0"
fpdf2 = "^2.8.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
ruff = "^0.6"
mypy = "^1.11"
types-pyyaml = "^6.0.12.20260518"
types-markdown = "^3.10.2.20260518"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "RUF"]
ignore = [
    "B008",  # FastAPI dependency injection uses calls in defaults.
    "S101",  # asserts in tests
    "E702",  # project uses a deliberate compact `a; b` style in models/migrations.
]

[tool.ruff.lint.per-file-ignores]
# Tests: fixture secrets, temp paths, fake-class attrs and default passwords are fine.
"tests/*" = ["S105", "S106", "S107", "S108", "E501", "RUF012"]
"alembic/versions/*" = ["E501", "E402"]  # migrations: long SQL/constraints, late imports
# Lab orchestration legitimately shells out to the containerlab CLI and uses
# non-crypto randomness for instance naming.
"app/services/labengine/*" = ["S603", "S607", "S311"]
"app/services/lab_lifecycle.py" = ["S603", "S607"]
"app/services/lab_jobs.py" = ["S603"]
"app/services/lab_seed.py" = ["S311"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
# Pragmatic baseline for a largely-untyped FastAPI app: check what's annotated,
# don't require full annotations everywhere yet.
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yaml", "markdown", "jsonpath_ng.*", "fpdf.*", "websockets.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
